# trustiq

./: .env.example  README.md  package.json
.github/workflows/: ci.yml
ai-engine/: pyproject.toml  requirements.txt
ai-engine/app/: main.py
ai-engine/app/models/: trust_score.py
ai-engine/app/services/: advanced_analyzer.py  data_analyzer.py  ml_pipeline.py  sentiment_analyzer.py  trust_scorer.py
backend/api/: .env.example  .env.production  Dockerfile  package.json  tsconfig.json
backend/api/prisma/: schema.prisma
backend/api/src/: app-enhanced.ts  app.ts  index.ts  server.ts
blockchain/: package.json  tsconfig.json
blockchain/sui/: Move.toml
blockchain/sui/scripts/: deploy.ts  event-processor.ts  interact.ts
blockchain/sui/src/: sui-service.ts
deployment/: docker-compose.yml
deployment/nginx/: nginx.conf
frontend/: .env.example  .env.production  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: AccountConnections.tsx  AnalyticsDashboard.tsx  Navbar.tsx  NotificationsPanel.tsx  OnChainBadge.tsx  ProtectedRoute.tsx  QuickActions.tsx  ScoreHistoryChart.tsx  TrustInsights.tsx  TrustMetrics.tsx  TrustScoreCard.tsx  VerificationStatus.tsx  WalletConnect.tsx
frontend/src/config/: app-config.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAccounts.ts  useTrustScore.ts  useWebSocket.ts
frontend/src/lib/: admin-api.ts  api-extended.ts  api.ts  types.ts
shared/config/: package.json
shared/types/: package.json
(+60 files in other folders)
