[tool.poetry]
name = "trustiq-ai-engine"
version = "1.0.0"
description = "AI-powered reputation scoring engine for TrustIQ"
authors = ["TrustIQ Team <team@trustiq.xyz>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
scikit-learn = "^1.3.2"
numpy = "^1.25.2"
pandas = "^2.1.4"
aiohttp = "^3.9.1"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"